--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -8,5 +8,8 @@ header {
 }
 
 .logo {
+    width: 150px;
+    height: 60px;
+    background: url("../images/logo.png") no-repeat center;
     padding-left: 20px;
 }
